--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				</header>
 				<main class="content__main">
 					<h1 class="content__main-heading">
-						<span>We're</span>
-						<p>coming</p>
-						<p>soon</p>
+						<span>We're</span><br />
+						coming<br />
+						soon<br />
 					</h1>
 					<p class="content__main-description">
 						Hello fellow shoppers! We're currently building our new fashion store. Add
