Fixed landmarks issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 	<body>
-		<div class="wrapper">
+		<main class="wrapper">
 			<div class="hero">
 				<picture>
 					<source media="(max-width: 767px)" srcset="/images/hero-mobile.jpg" />
@@ -60,7 +60,7 @@
 					</form>
 				</main>
 			</div>
-		</div>
+		</main>
 		<!-- JavaScript -->
 		<script src="/js/main.js"></script>
 	</body>
