Fixed landmarks issue

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 	<body>
-		<main class="wrapper">
-			<div class="hero">
+		<div class="wrapper">
+			<aside class="hero">
 				<picture>
 					<source media="(max-width: 767px)" srcset="/images/hero-mobile.jpg" />
 					<source media="(min-width: 768px)" srcset="/images/hero-desktop.jpg" />
 					<img class="hero__image" src="/images/hero-desktop.jpg" alt="Smiling girl" />
 				</picture>
-			</div>
+			</aside>
 			<div class="content">
 				<header class="content__header">
 					<img
@@ -60,7 +60,7 @@
 					</form>
 				</main>
 			</div>
-		</main>
+		</div>
 		<!-- JavaScript -->
 		<script src="/js/main.js"></script>
 	</body>
